Advanced editor: Fixed toolbar wrap background scroll Advanced editor Fixed context menu appearing when right clicking toolbar wrapper drop down

--- a/src/css/editor.scss
+++ b/src/css/editor.scss
@@ -1226,3 +1226,7 @@ i.mce-i-fa-open:before {
 }
 
 /**color icon end**/
+
+.tox .tox-toolbar, .tox .tox-toolbar__overflow, .tox .tox-toolbar__primary {
+    background-attachment: local !important;
+}
